email moved facebook added email off center ill fix it later

--- a/style.css
+++ b/style.css
@@ -42,6 +42,14 @@ p1
      font-weight: bold;
      color: black;
 }
+p2 {
+   
+    text-align:center;
+     font-family: 'basictitlefont';
+     font-size: 200%;
+     font-weight: bold;
+     color: black;
+}
 
 #propic{
       margin-bottom:0em;
@@ -51,5 +59,13 @@ p1
         width: 200px;
     border-radius: 50%;
 }
+
+#contact{
+    margin-left: auto;
+    margin-right: auto;
+    width: 6em
+}
+
+
   
       
